# stremio-jackett

./: pyproject.toml
.github/workflows/: docker-rework.yml
source/: Dockerfile  constants.py  main.py  requirements.txt
source/cache/: cache_base.py  local_redis.py
source/debrid/: alldebrid.py  premiumize.py  realdebrid.py
source/jackett/: jackett_result.py  jackett_service.py
source/templates/: config.js  index.html
source/torrent/: torrent_service.py  torrent_smart_container.py
source/utils/: cache.old.py  cache.py  detection.py  filter_results.py  parse_config.py  stremio_parser.py
source/utils/filter/: language_filter.py  max_size_filter.py  quality_exclusion_filter.py  results_per_quality_filter.py  title_exclusion_filter.py
source/zilean/: zilean_result.py  zilean_service.py
